--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "repository": "https://github.com/AsafKaravani/sintra.git",
   "author": "Assaf Koren <assafnoahkoren@gmail.com>",
   "license": "MIT",
+  "private": true,
   "workspaces": [
     "services/*",
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^5.0.1",
+    "eslint": "^8.7.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.4.4"
+  }
 }
