--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,18 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": [],
-  "extends": [],
-  "parserOptions": { "ecmaVersion": 2018, "sourceType": "module" },
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
   "rules": {
     "no-unused-vars": "off"
   }
