--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^5.0.1",
     "eslint": "^8.7.0",
-    "prettier": "^2.5.1",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.1.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^9.0.0"
   }
 }
