--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
-  "vs-code-prettier-eslint.prettierLast": true
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
 }
