--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -7,12 +7,14 @@ jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./services/client
+
     steps:
       - uses: actions/checkout@v2
       - run: yarn install && yarn build
-        working-directory: ./services/client
       - uses: FirebaseExtended/action-hosting-deploy@v0
-        working-directory: ./services/client
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SINTRA_APP_DEV }}'
