--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,7 +15,7 @@ jobs:
         working-directory: ./services/client
 
     steps:
-      - run: echo "$VITE_FB_API_KEY"
+      - run: echo "asdasd"
       - uses: actions/checkout@v2
       - run: yarn install && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
