--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,15 +8,30 @@ name: Deploy to Firebase Hosting on-push to main
       - main
 jobs:
   build_and_deploy:
-    environment: sintra-server-dev
     runs-on: ubuntu-latest
+    environment: sintra-server-dev
+    env:
+      SERVER_ENDPOINT: ${{ secrets.SERVER_ENDPOINT }}
+      HASURA_GQL_ENDPOINT: ${{ secrets.HASURA_GQL_ENDPOINT }}
+      HASURA_ADMIN_SECRET: ${{ secrets.HASURA_ADMIN_SECRET }}
+      PG_HOST: ${{ secrets.PG_HOST }}
+      PG_USERNAME: ${{ secrets.PG_USERNAME }}
+      PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
+      PG_PORT: ${{ secrets.PG_PORT }}
+      PG_DATABASE: ${{ secrets.PG_DATABASE }}
+      PG_SSL: ${{ secrets.PG_SSL }}
+      VITE_FB_API_KEY: ${{ secrets.VITE_FB_API_KEY }}
+      VITE_FB_AUTH_DOMAIN: ${{ secrets.VITE_FB_AUTH_DOMAIN }}
+      VITE_FB_PROJECT_ID: ${{ secrets.VITE_FB_PROJECT_ID }}
+      VITE_FB_STORAGE_BUCKET: ${{ secrets.VITE_FB_STORAGE_BUCKET }}
+      VITE_FB_MESSAGING_SENDER_ID: ${{ secrets.VITE_FB_MESSAGING_SENDER_ID }}
+      VITE_FB_APP_ID: ${{ secrets.VITE_FB_APP_ID }}
     defaults:
       run:
         working-directory: ./services/client
 
     steps:
       - uses: actions/checkout@v2
-      - run: echo ${{env.VITE_FB_API_KEY}}
       - run: yarn install && yarn build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
