--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,9 +5,26 @@ name: Deploy to Firebase Hosting on PR
 'on': pull_request
 jobs:
   build_and_preview:
-    environment: sintra-server-dev
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
+    environment: sintra-server-dev
+    env:
+      SERVER_ENDPOINT: ${{ secrets.SERVER_ENDPOINT }}
+      HASURA_GQL_ENDPOINT: ${{ secrets.HASURA_GQL_ENDPOINT }}
+      HASURA_ADMIN_SECRET: ${{ secrets.HASURA_ADMIN_SECRET }}
+      PG_HOST: ${{ secrets.PG_HOST }}
+      PG_USERNAME: ${{ secrets.PG_USERNAME }}
+      PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
+      PG_PORT: ${{ secrets.PG_PORT }}
+      PG_DATABASE: ${{ secrets.PG_DATABASE }}
+      PG_SSL: ${{ secrets.PG_SSL }}
+      VITE_FB_API_KEY: ${{ secrets.VITE_FB_API_KEY }}
+      VITE_FB_AUTH_DOMAIN: ${{ secrets.VITE_FB_AUTH_DOMAIN }}
+      VITE_FB_PROJECT_ID: ${{ secrets.VITE_FB_PROJECT_ID }}
+      VITE_FB_STORAGE_BUCKET: ${{ secrets.VITE_FB_STORAGE_BUCKET }}
+      VITE_FB_MESSAGING_SENDER_ID: ${{ secrets.VITE_FB_MESSAGING_SENDER_ID }}
+      VITE_FB_APP_ID: ${{ secrets.VITE_FB_APP_ID }}
+
     defaults:
       run:
         working-directory: ./services/client
