--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -25,7 +25,8 @@ jobs:
       VITE_FB_STORAGE_BUCKET: ${{ secrets.VITE_FB_STORAGE_BUCKET }}
       VITE_FB_MESSAGING_SENDER_ID: ${{ secrets.VITE_FB_MESSAGING_SENDER_ID }}
       VITE_FB_APP_ID: ${{ secrets.VITE_FB_APP_ID }}
-
+      VITE_COMMIT_SHA: ${{ github.sha }}
+      VITE_COMMIT_REF: ${{ github.ref }}
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.14 # This is the action
