--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,6 +26,8 @@ jobs:
       VITE_FB_STORAGE_BUCKET: ${{ secrets.VITE_FB_STORAGE_BUCKET }}
       VITE_FB_MESSAGING_SENDER_ID: ${{ secrets.VITE_FB_MESSAGING_SENDER_ID }}
       VITE_FB_APP_ID: ${{ secrets.VITE_FB_APP_ID }}
+      VITE_COMMIT_SHA: ${{ github.sha }}
+      VITE_HEAD_REF: ${{ github.head_ref }}
     defaults:
       run:
         working-directory: ./services/client
