--- a/.github/workflows/server-deploy.yml
+++ b/.github/workflows/server-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       VITE_FB_MESSAGING_SENDER_ID: ${{ secrets.VITE_FB_MESSAGING_SENDER_ID }}
       VITE_FB_APP_ID: ${{ secrets.VITE_FB_APP_ID }}
       VITE_COMMIT_SHA: ${{ github.sha }}
-      VITE_COMMIT_REF: ${{ github.ref }}
+      VITE_HEAD_REF: ${{ github.head_ref }}
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.14 # This is the action
