added dotenv and allowed some env vars on client

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 //--------------------------------------------------------------------------------------//
+//                                        SERVER                                        //
+//--------------------------------------------------------------------------------------//
+VITE_SERVER_ENDPOINT=  ...
+
+//--------------------------------------------------------------------------------------//
 //                                        HASURA                                        //
 //--------------------------------------------------------------------------------------//
-HASURA_GQL_ENDPOINT=  ...
-HASURA_ADMIN_SECRET=  ...
+VITE_HASURA_GQL_ENDPOINT=   ...
+HASURA_ADMIN_SECRET=        ...
 
 //--------------------------------------------------------------------------------------//
 //                                       POSTGRES                                       //
