--- a/services/client/package.json
+++ b/services/client/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "dotenv -e ../../.env.local vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "dotenv -e ../../.env.local vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
