--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
 		"sourceType": "module"
 	},
 	"rules": {
+		"@typescript-eslint/no-unused-vars": "off",
 		"no-unused-vars": "off",
 		"@stylistic/js/newline-per-chained-call": [
 			"error",
