added prisma and initated db

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ HASURA_ADMIN_SECRET=        ...
 //--------------------------------------------------------------------------------------//
 //                                       POSTGRES                                       //
 //--------------------------------------------------------------------------------------//
+PG_URL= 			...
 PG_HOST=      ...
 PG_USERNAME=  ...
 PG_PASSWORD=  ...
