--- a/services/client/package.json
+++ b/services/client/package.json
@@ -15,10 +15,12 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.14.18",
     "firebase": "^10.6.0",
+    "i18next": "^23.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
