--- a/services/client/package.json
+++ b/services/client/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "@sintra/client",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "dotenv -e ../../.env.local vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "dotenv -e ../../.env.local vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/material": "^5.14.18",
-    "@prisma/client": "^5.6.0",
-    "firebase": "^10.6.0",
-    "i18next": "^23.7.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-hook-form": "^7.48.2",
-    "react-i18next": "^13.5.0",
-    "react-router-dom": "^6.19.0",
-    "recoil": "^0.7.7"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+	"name": "@sintra/client",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "dotenv -e ../../.env.local vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "dotenv -e ../../.env.local vite build && dotenv -e ../../.env.local vite preview"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@fontsource/roboto": "^5.0.8",
+		"@mui/material": "^5.14.18",
+		"@prisma/client": "^5.6.0",
+		"firebase": "^10.6.0",
+		"i18next": "^23.7.6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-firebase-hooks": "^5.1.1",
+		"react-hook-form": "^7.48.2",
+		"react-i18next": "^13.5.0",
+		"react-router-dom": "^6.19.0",
+		"recoil": "^0.7.7",
+		"tailwind-safelist-generator": "^1.0.0",
+		"tailwindcss": "^3.3.5"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@vitejs/plugin-react": "^4.0.3",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.31",
+		"prettier": "^2.5.1",
+		"tailwindcss": "^3.3.5",
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5"
+	}
 }
