--- a/services/client/package.json
+++ b/services/client/package.json
@@ -19,6 +19,7 @@
 		"firebase": "^10.6.0",
 		"i18next": "^23.7.6",
 		"react": "^18.2.0",
+		"react-charts": "^3.0.0-beta.57",
 		"react-dom": "^18.2.0",
 		"react-firebase-hooks": "^5.1.1",
 		"react-hook-form": "^7.48.2",
