--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -56,3 +56,5 @@ jobs:
         SLACK_TITLE: ${{ github.event.head_commit.message }}
         SLACK_MESSAGE: 'https://sintra-app-dev.web.app'
         SLACK_FOOTER: ''
+        SLACK_ICON: 'https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
+        SLACK_USERNAME: 'Sintra Updates Bot'
