try add notification to slack

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -55,7 +55,7 @@ jobs:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_TITLE: ${{ github.event.head_commit.message }}
         SLACK_MESSAGE: 'https://sintra-app-dev.web.app'
-        SLACK_FOOTER: ''
+        SLACK_FOOTER: '@channel'
         SLACK_ICON: 'https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
         SLACK_USERNAME: 'Sintra Updates Bot'
         MSG_MINIMAL: true
