--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
 	"editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
 	"editor.formatOnSave": true,
 	"editor.codeActionsOnSave": {
-		"source.fixAll": true
+		"source.fixAll": "explicit"
 	},
 	// The number of spaces a tab is equal to.
 	"editor.tabSize": 2,
