--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,19 @@
 	// Insert spaces when pressing Tab.
 	"editor.insertSpaces": false,
 	// When opening a file, `editor.tabSize` and `editor.insertSpaces` will be detected based on the file contents.
-	"editor.detectIndentation": false
+	"editor.detectIndentation": false,
+	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"typescript.tsserver.maxTsServerMemory": 8192,
+	"typescript.format.enable": false,
+	"typescript.validate.enable": false,
+	"editor.accessibilitySupport": "off",
+	"extensions.ignoreRecommendations": true,
+	"telemetry.telemetryLevel": "crash",
+	"typescript.surveys.enabled": false,
+	"typescript.disableAutomaticTypeAcquisition": true,
+	"update.enableWindowsBackgroundUpdates": false,
+	"update.mode": "none",
+	"workbench.enableExperiments": false,
+	"workbench.settings.enableNaturalLanguageSearch": false,
+
 }
