--- a/services/client/package.json
+++ b/services/client/package.json
@@ -7,7 +7,8 @@
 		"dev": "dotenv -e ../../.env.local vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "dotenv -e ../../.env.local vite build && dotenv -e ../../.env.local vite preview"
+		"preview": "dotenv -e ../../.env.local vite build && dotenv -e ../../.env.local vite preview",
+		"zeus": "dotenv -e ../../.env.local sh ./scripts/zeus.sh"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
@@ -15,15 +16,20 @@
 		"@fontsource/roboto": "^5.0.8",
 		"@mui/material": "^5.14.18",
 		"@prisma/client": "^5.6.0",
+		"@tanstack/react-query": "^5.17.10",
+		"@tanstack/react-query-devtools": "^5.17.10",
 		"ag-grid-react": "^31.0.1",
 		"country-code-lookup": "^0.1.0",
 		"firebase": "^10.6.0",
+		"graphql-zeus": "^5.3.3",
 		"i18next": "^23.7.6",
+		"moment": "^2.30.1",
 		"react": "^18.2.0",
 		"react-charts": "^3.0.0-beta.57",
 		"react-dom": "^18.2.0",
 		"react-firebase-hooks": "^5.1.1",
 		"react-hook-form": "^7.48.2",
+		"react-hot-toast": "^2.4.1",
 		"react-i18next": "^13.5.0",
 		"react-router-dom": "^6.19.0",
 		"recoil": "^0.7.7",
