--- a/services/client/package.json
+++ b/services/client/package.json
@@ -33,6 +33,7 @@
 		"react-i18next": "^13.5.0",
 		"react-router-dom": "^6.19.0",
 		"recoil": "^0.7.7",
+		"swiper": "^11.0.5",
 		"tailwind-safelist-generator": "^1.0.0",
 		"tailwindcss": "^3.3.5"
 	},
