--- a/services/client/package.json
+++ b/services/client/package.json
@@ -35,7 +35,8 @@
 		"recoil": "^0.7.7",
 		"swiper": "^11.0.5",
 		"tailwind-safelist-generator": "^1.0.0",
-		"tailwindcss": "^3.3.5"
+		"tailwindcss": "^3.3.5",
+		"usehooks-ts": "^2.12.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
